[package]
name = "final-marusya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4", features = [] }
# openssl = { version = "0.10", features = ["v110"] }
actix-cors = "0.6.1"
actix = "0.11"
actix-rt = "2.2"
http = "0.2.8"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
rand = "0.8.5"